# devenv-example

./: .gitignore  Makefile  README.md  devenv.nix  pyproject.toml
flake-full/: flake.nix
imgapp/: __init__.py
nix-basics/: file.nix
nix-flakes/: README.md
nix-learn/: README.md
python-flake/: Makefile  flake.nix  pyproject.toml
shell-environments/: README.md  nixpkgs-release.sh  shell.nix
