[tool.poetry]
name = "imgapp"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pillow = "^10.4.0"
flask = "^3.0.3"

[tool.poetry.scripts]
imgapp = 'imgapp:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
